Search Filter incorporatd
At this end point, I have completed the /search/filter endpoint.  (e.g.
/search/matthew1-10 will restrict the view to only showing those posts
with references in the first ten chapters of Matthew)

--- a/seconcordance/concordance/templates/concordance/index.html
+++ b/seconcordance/concordance/templates/concordance/index.html
@@ -25,10 +25,9 @@ a.tooltip :hover {
 		<INPUT id='filter' name='filter' type='text' placeholder='search' value='' />
 	</DIV>
 	<DIV id='content'>
-	{{ filter_range }}
-	{{ filter_ref.plain_ref }}
-	{{ filter_ref.book_num }}
-	{{ a_string }}
+	{% if found_references_list %}
+		Only showing entries in range {{ filter_ref.plain_ref }}
+	{% endif %}
 
 	{% if found_references_list %}
 
