--- a/seconcordance/concordance/templates/concordance/index.html
+++ b/seconcordance/concordance/templates/concordance/index.html
@@ -21,6 +21,14 @@ span.vote-count-pass {font-size: large;}
 
 INPUT#page { width: 30px;}
 
+.question, .answer {
+	padding-bottom: 20px;
+	padding-top: 20px;
+	width: 728px;
+	border-bottom: 1px solid #ccc;
+	border-top: 1px solid #ccc;
+}
+
 </STYLE>
 
 <script>
@@ -108,7 +116,7 @@ INPUT#page { width: 30px;}
 
 		<TABLE>
 			{% for found_ref in found_references_list %}
-				<TR class="{% cycle 'row1' 'row2' %}{%if found_ref.sepost.score > 0 %}positive{% elif found_ref.sepost.score == 0 %}zero{% else %}negative{% endif %} {%if found_ref.sepost.qa == 'q' %}question{% else %}answer{% endif %}">
+				<TR class="{% cycle 'row1' 'row2' %} {%if found_ref.sepost.score > 0 %}positive{% elif found_ref.sepost.score == 0 %}zero{% else %}negative{% endif %} {%if found_ref.sepost.qa == 'q' %}question{% else %}answer{% endif %}">
 					{% autoescape off %}
 					<TD class='reference'>
 						<strong>
